======== 2.25.90 ==============================================================

	* NEWS:
	* README:
	* configure.ac: Release 2.25.90

======== 2.25.2 ===============================================================

2009-01-09  Cosimo Cecchi  <cosimoc@gnome.org>

	* NEWS:
	* README:
	* configure.ac: Release 2.25.2

======== 2.25.1 ===============================================================

2009-01-08  Cosimo Cecchi  <cosimoc@gnome.org>

	* NEWS:
	* README:
	* configure.ac: Release 2.25.1

2008-12-19  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.ac: Post-release bump to 2.25.1

======== 2.25.0 ===============================================================

2008-12-19  Emmanuele Bassi  <ebassi@gnome.org>

	* README:
	* NEWS: Release 2.25.0

2008-11-04  Cosimo Cecchi  <cosimoc@gnome.org>

	* configure.ac: reorganize PKG_CHECK_MODULES to split libgnome
	checks from the rest (part of #557262).

2008-10-21  Cosimo Cecchi  <cosimoc@gnome.org>

	* configure.ac: Bump GTK+ requirement to 2.14.0.
	Drop libgnomeui dependency from gnome-screenshot (#557169).

2008-10-20  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.ac: Post release and post branch bump to 2.25.0

======== 2.24.1 ===============================================================

2008-10-20  Emmanuele Bassi  <ebassi@gnome.org>

	* NEWS:
	* README:
	* configure.ac: Release 2.24.1

======== 2.24.0 ===============================================================

2008-09-08  Emmanuele Bassi  <ebassi@gnome.org>

	* NEWS:
	* README:
	* configure.ac: Release 2.24.0.

2008-09-13  Patryk Zawadzki  <patrys@pld-linux.org>

	* baobab/data/baobab.desktop.in.in: add Filesystem category.
	* gnome-dictionary/data/gnome-dictionary.desktop.in.in:
	change category to Office;Dictionary.
	* logview/gnome-system-log.desktop.in.in: drop X-Red-Hat-Base
	(#552054).

2008-09-08  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.ac: Post-release bump to 2.23.93

2008-09-08  Emmanuele Bassi  <ebassi@gnome.org>

	* NEWS: