@@ -1,3 +1,7 @@
+2009-02-24  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* Makefile.am: add gthread CFLAGS and LIBS (#572985).
+
 2009-02-04  Vincent Untz  <vuntz@gnome.org>
 
 	* gtkmessagearea.c: add an include to fix warnings
