@@ -1,3 +1,8 @@
+2009-02-24  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* configure.ac: add a section that checks for gthread, so that we
+	can explicitely	link to it.
+
 ======== 2.25.90 ==============================================================
 
 	* NEWS:
